# test_lexicom

./: .gitignore  README.md  example.env  main.py  pyproject.toml
src/: config.py  database.py
src/address/: router.py  schemas.py
static/: style.css
templates/: index.html
