[tool.poetry]
name = "test-lexicom"
version = "0.1.0"
description = ""
authors = ["Shaan-kun <shaan-kun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.1"}
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
